--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 .btn{
     padding: 12px;
@@ -18,14 +19,12 @@
 
 #board{
     border:1px solid;
-    width: 100%;
+    width: 80%;
     height: 100%;
 }
 
 .container__game{
-    border:1px solid;
-    width: 50%;
-    height: 400px;
+    width:50%;
     margin:auto;
     display: flex;
     flex-wrap: wrap;
@@ -43,4 +42,44 @@
 
 #board{
     background-color: beige;
+}
+
+.disabled{
+    color: transparent;
+}
+
+.container__lines{
+    display: flex;
+}
+
+.line{
+    margin-right: 0.3em;
+    color: blue;
+    font-size: 80px;
+}
+.container__buttons{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.container__incorrectLetter{
+    text-align: center;
+    width: 100%;
+    margin: 2em;
+}
+
+.game__over{
+    font-size: 2em;
+    color:red;
+    font-weight:700;
+    width: 15%;
+    text-align: center;
+    padding: 0.2em;
+}
+.container__game__board{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    flex-wrap: wrap;
 }
