--- a/style.css
+++ b/style.css
@@ -9,7 +9,9 @@
     border-radius: 10px;
     margin-top: 10px;
     cursor: pointer;
-    width: 200px;
+    width: 18em;
+    border:1px solid;
+    height: 4em;
 }
 
 .newGame{
@@ -18,7 +20,7 @@
 }
 
 #board{
-    border:1px solid;
+    background-color: transparent;
     width: 80%;
     height: 100%;
 }
@@ -40,12 +42,9 @@
     color:  #0A3871;
 }
 
-#board{
-    background-color: beige;
-}
-
 .disabled{
     color: transparent;
+    display:none;
 }
 
 .container__lines{
@@ -82,4 +81,81 @@
     align-items: center;
     width: 100%;
     flex-wrap: wrap;
+}
+
+/*Menu*/
+.container__menu{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    justify-content: center;
+}
+
+.container__menu__button{
+    width: 15em;
+    height: 4em;
+    border:1px solid;
+}
+
+.container__menu__button:nth-child(1){
+    height: 6em;
+    color:white;
+    width: 18em;
+}
+.btn__word{
+    border:1px solid;
+}
+.hidden{
+    display: none;
+}
+
+.visbility{
+    display: flex;
+}
+
+.bg__White{
+    background: white;
+}
+
+/*Buttons*/
+
+.btn__blue{
+    color:white;
+    background-color:  #0A3871;
+}
+
+.btn__white{
+    background-color: white;
+    color:blue;
+}
+.msg__error{
+    color:red;
+}
+/*add word*/
+.container__addWord{
+    margin-top: 10%;
+    text-align: center;
+}
+.container__addWord__text{
+    display: flex;
+    flex-wrap: wrap;
+    width: 50%;
+    margin:auto;
+}
+.container__addWord__textArea{
+    height: 50vh;
+    font-size: 25px;
+    border:none;
+    width: 100%;
+    margin:auto;
+    padding-top: 1em;
+    margin:auto;
+}
+
+.container__addWord__buttons{
+    display: flex;
+    justify-content: space-between;
+    width: 50%;
+    margin:auto;
 }
